# vframe

./: .gitignore  README.md  flake.nix  pyproject.toml  setup.py
src/: cli.py
vframe/cli/: cli.py
vframe/settings/: app_cfg.py
vframe/utils/: degrade_utils.py
