[tool.poetry]
name = "vframe"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT license"
include = ["config.yaml", "modelzoo/vframe.yaml", "modelzoo/models/pytorch/detection/coco/coco_l6.pt", "modelzoo/models/pytorch/detection/coco/labels.txt"]

[tool.poetry.dependencies]
python = "^3.9"
onnxruntime = "~1.11.1"
protobuf= ">=3.12.2,<= 3.20.1"
numpy = "^1.23.1"
matplotlib = "^3.5.2"
pandas = "^1.4.3"
tqdm = "^4.64.0"
scikit-learn = "^1.1.1"
python-dotenv = "^0.20.0"
PyYAML = "^6.0"
opencv-python = "^4.6.0"
dacite = "^1.6.0"
colorlog = "^6.6.0"
click = "^8.1.3"
imageio = "^2.19.5"
ImageHash = "^4.2.1"
xmltodict = "^0.13.0"
"ruamel.yaml" = "^0.17.21"
seaborn = "^0.11.2"
psutil = "^5.9.1"
ipython = "^8.4.0"
pymediainfo = "^5.1.0"

[tool.poetry.scripts]
vframe = "src.cli:cli"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
